--- a/app.json
+++ b/app.json
@@ -1,6 +1,5 @@
 {
   "pages":[
-    "pages/main-tabbar/index",
     "pages/main/index",
     "pages/my-page/index",
     "pages/my-edit/index",
@@ -12,6 +11,31 @@
     "navigationBarTitleText": "Weixin",
     "navigationBarTextStyle":"black"
   },
+
+  "tabBar": {
+    "custom": true,
+    "color": "#000000",
+    "selectedColor": "#000000",
+    "backgroundColor": "#000000",
+    "list": [
+      {
+        "pagePath": "pages/main/index",
+        "text": "首页"
+      },
+      {
+        "pagePath": "pages/my-page/index",
+        "text": "奖品"
+      },
+      {
+        "pagePath": "pages/my-edit/index",
+        "text": "兑换"
+      },
+      {
+        "pagePath": "pages/my-dtl/index",
+        "text": "我的"
+      }
+    ]
+  },
  
   "sitemapLocation": "sitemap.json",
   "usingComponents": {
@@ -22,6 +46,10 @@
     "van-search": "@vant/weapp/search/index",
     "van-tab": "@vant/weapp/tab/index",
     "van-tabs": "@vant/weapp/tabs/index",
-    "van-panel": "@vant/weapp/panel/index"
+    "van-panel": "@vant/weapp/panel/index",
+    "van-icon": "@vant/weapp/icon/index",
+    "van-swipe-cell": "@vant/weapp/swipe-cell/index",
+    "van-cell-group": "@vant/weapp/cell-group/index",
+    "van-cell":  "@vant/weapp/cell/index"
   }
 }
